Fixed issue #995.